Fixed light/dark mode
Previously, the CSS styling for light/dark mode in App.css was overriding the CSS in the Home.jsx table, and the <p> and <h1> styling in the 'Privacy' page and Navbar.jsx was being overriden by CSS in Home.css

I fixed the issue by specifying containers for h1, p, etc. in each CSS file as needed, making sure each page had its own unique styling as needed, while also following light/dark mode.

--- a/pathify/src/App.css
+++ b/pathify/src/App.css
@@ -11,6 +11,6 @@ html.light {
 }
 
 html.dark {
-  background-color: black;
+  background-color: #121212;
   color: white;
 }
