--- a/pathify/src/components/Settings.css
+++ b/pathify/src/components/Settings.css
@@ -135,7 +135,7 @@ hr.line.toggled {
 }
 
 .react-color .sketch-picker .hue {
-  display: none !important;
+  display: none;
 }
 
 /* CSS for Privacy settings */
@@ -168,6 +168,14 @@ hr.line.toggled {
   margin: 0;
   font-size: 14px; 
   color: #555; 
+  padding-bottom: 10px;
+}
+
+html.dark .priv-description-col p {
+  margin: 0;
+  font-size: 14px; 
+  color: white; 
+  padding-bottom: 10px;
 }
 
 /* CSS for Current Intern Application List preview */
@@ -181,15 +189,31 @@ hr.line.toggled {
   padding: 0;
 }
 
+html.dark .preview-link {
+  background: none;
+  border: none;
+  color: lightblue; 
+  text-decoration: underline;
+  font-size: 14px; 
+  cursor: pointer;
+  padding: 0;
+}
+
 .preview-link:hover {
-  color: darkblue;
+  color: purple;
   text-decoration: none; 
+}
+
+html.dark .preview-link:hover{
+  color: lightpink;
+  text-decoration: none;
 }
 
 .preview-box {
   margin-top: 10px;
   padding: 10px;
   background-color: beige;
+  color: black;
   border: 1px solid #ddd;
   border-radius: 4px;
   width: 300px;
