--- a/pathify/src/pages/Home.css
+++ b/pathify/src/pages/Home.css
@@ -21,19 +21,21 @@ table{
     margin: 0 auto; 
 }
 
-th{
+.table-container th{
     background-color:rgba(197, 214, 232, 0.753);
+    color: black;
 }
 
-tr{
+.table-container tr{
     background-color: white;
+    color: black;
 }
 
-td{
+.table-container td{
     justify-content: center;
 }
 
-th , tr, td{
+.table-container th, tr, td{
     border: 1.5px solid black;
     text-align: center;
     padding: 20px; 
@@ -48,11 +50,13 @@ th , tr, td{
     background-color: green;
 }
 
-h1{
+.table-container h1{
     padding-top: 10px;
+    color: black;
 }
 
-p{
+.table-container p{
     padding-top:5px;
     padding-bottom:10px;
+    color: black;
 }
